# Triangulation_1

./: CMakeLists.txt  main.cpp  symengine.h
